4panel plot and syncPE

--- a/manuscript/msv2.tex
+++ b/manuscript/msv2.tex
@@ -339,13 +339,31 @@ Phenotypic diversity ($\Delta \mu$) evaluated at the steady state as a function 
 } \label{fig:traitdiff}
 \end{figure}
 
+
+\noindent{\bf (c) Rates of recovery following catastrophic collapse}\\ 
+(Results here - constant m)
+
+(Results here - density dependent m)
+
+\begin{figure*}
+  \captionsetup{justification=raggedright,
+singlelinecheck=false
+}
+\centering
+\includegraphics[width=0.9\textwidth]{figs2/fig_relax_comb.pdf}
+\caption{
+Top row (a, b)
+Bottom row (c, d)
+} \label{fig:relax}
+\end{figure*}
+
  
 %% Increased habitat heterogeneity
   %%% 1) exaggerates lowering of mean biomass with increasing stray rates
   %%% 2) increases the likelihood of alternative stable sites & increases the differences in alternative stable state values with increasing stray rates
   %%% 3) decreases the PE (!!)
 
-\noindent{\bf (c) The role of habitat heterogeneity on the portfolio effect}\\ 
+\noindent{\bf (d) The role of habitat heterogeneity on the portfolio effect}\\ 
 \noindent Increased differences in optimal trait values between sites ($\Delta\theta = \left|\theta_i - \theta_j\right|$) corresponds to greater between-site differences in conditions that favor alternative traits, interpreted here as increased habitat heterogeneity.
 At one end of the spectrum, if both populations are isolated, natural selection would direct the mean trait values of both populations towards their respective optima, such that $\mu_i(t) \rightarrow \theta_i$ as $t\rightarrow\infty$.
 %difference in optimal trait values between the local and remote populations, which we call .
@@ -395,7 +413,7 @@ singlelinecheck=false
 
 
 
-\noindent{\bf (d) Linking stray rate and habitat heterogeneity}\\ 
+\noindent{\bf (e) Linking stray rate and habitat heterogeneity}\\ 
 \noindent We have so far treated $\Delta\theta$ and $m$ as independent parameters, however we may also assume that if environmental heterogeneity increases with distance, the rate of straying may be expected to decline given that individuals are less likely to stray into distant habitats. %-- in particular North-South difference if trait optimality is largely temperature-dependent --
 If we incorporate this interdependence of $m$ and $\Delta\theta$, low rates of straying would correspond to mixing dissimilar (distant) populations, and high rates of straying would correspond to mixing similar (nearby) populations.
 
