revised environ hetero fig

--- a/manuscript/msv2.tex
+++ b/manuscript/msv2.tex
@@ -119,7 +119,9 @@ To address this question we construct a minimal eco-evolutionary model of two po
 An important and relatively novel component of this model is the inclusion of a parameter that defines the difference in local conditions that favor different trait optima, increasing values of which correlates to populations that mix across increasingly heterogeneous environments \cite[though see ]{Berdahl:2015kv}.
 Although our proposed model is was constructed with the dynamics of salmon populations in mind, the framework is general and the conclusions are likely relevant to a diverse range of migratory organisms where locally adapted populations are linked by dispersal.
 We first show that specific rates of straying and trait heritability can have large effects on the qualitative dynamics of populations over time, in many cases giving rise to alternative steady states where one site is pushed towards very low biomass.
-The emergence of alternative steady states results in a nonlinear response of the portfolio effect, suggesting that metapopulation persistence can be quite sensitive to the combined influences of  collective straying across a selective landscape.
+The emergence of alternative steady states results in a nonlinear response of the portfolio effect, suggesting that metapopulation persistence can be quite sensitive to the combined influences of collective straying across a selective landscape.
+
+%Extinction and return times
 
 %Habitat heterogeneity
 A second important finding of our minimal model reveals that systems with greater habitat heterogeneity (measured by an increased difference in the trait values that are optimal between sites) host an intermediate range of straying rates where the portfolio effect increases to a local maximum, signaling that under certain conditions moderate amounts of straying between populations can increase the likelihood of persistence despite the deleterious evolutionary effects overall.
@@ -259,10 +261,10 @@ Thus, we can integrate these two variables by setting $m,m_0 = (2 + \epsilon (\t
 
 \noindent{\bf (a) Nonlinear effects of straying on the Portfolio Effect} \\
 \noindent Straying generally lowers steady state densities for both recipient and donor populations by \emph{i}) losing locally-adapted individuals due to straying and \emph{ii}) introducing maladapted individuals from the donor population. %, regardless of trait heritability and variance or habitat heterogeneity
-The decline in steady state densities is not gradual: as straying increases, the system crosses a fold bifurcation whereby the single steady state among both sites becomes two alternative steady states: one at high biomass density, and one at low biomass density (Fig. \ref{fig:traj}A,B).
-This bifurcation occurs at lower values of the stray rate $m$ for low trait heritability $h^2$ (Fig \ref{fig:PE}A), indicating that greater coupling between ecological and evolutionary dynamics in addition to greater rates of straying results in alternative stable states among the two sites.
+The decline in steady state densities is not gradual: as straying increases, the system crosses a fold bifurcation whereby the single steady state across both sites becomes two alternative steady states: one at high biomass density, and one at low biomass density (Fig. \ref{fig:traj}a,b).
+This bifurcation occurs at lower values of the stray rate $m$ for lower trait heritability $h^2$ (Fig \ref{fig:PE}a,b), indicating that lower coupling between ecological and evolutionary dynamics in addition to greater rates of straying guarantees the existence of alternative stable states.
 
-Trait heritability also has a large impact on the sensitivity of both the total steady state density ($N^*_T=N^*_1+N^*_2$) as well as the difference between steady state densities ($\Delta N=\sqrt{(N^*_1-N^*_2)^2}$).
+Trait heritability has a large impact on the sensitivity of both the total steady state density ($N^*_T=N^*_1+N^*_2$) as well as the difference between steady state densities ($\Delta N=\sqrt{(N^*_1-N^*_2)^2}$).
 Greater trait heritability results in a larger decline in $N_T^*$ for increasing stray rates $m$, though results in only moderate changes to $\Delta N$ (Figs. \ref{fig:PE}A,B).
 Conversely, if the trait is less heritable, an increase in the stray rate has little impact on the total biomass density and contrastingly large effects on the difference in population densities between sites (Fig. \ref{fig:PE}A,B).
 
